# targets

./: .gitmodules  Makefile  README.md
targets_app/: README.md  build.gradle  settings.gradle
targets_app/app/: build.gradle
targets_app/app/src/androidTest/java/com/vajsoft/targetsapp/: ExampleInstrumentedTest.java  ModelInferenceOnAndroidTest.java  ModelInferenceTest.java
targets_app/app/src/main/: AndroidManifest.xml
targets_app/app/src/main/java/com/vajsoft/targetsapp/: CameraCapture.java  DriveClient.java  MainActivity.java  ModelInference.java  ModelOutputs.java
targets_app/app/src/main/res/layout/: activity_main.xml  content_main.xml
targets_app/app/src/main/res/menu/: menu_main.xml
targets_app/app/src/main/res/values/: strings.xml
targets_app/gradle/wrapper/: gradle-wrapper.properties
targets_ip/: CMakeLists.txt  CPPLINT.cfg  exploredata.ipynb  grid.py  io.cc  io.h  ipcam.py  linedetect.cc  main.cc  opt.cc  opt.h  opt_test.cc  preproc.cc  preproc.h  rectdetect.cc  table.csv  target.cc  target.h  target_model.cc  target_model.h  target_model_test.cc  target_test.cc  test.cc  utils.cc  utils.h  utils_test.cc  video.cc  video.h
targets_tf/: Arrow detection.ipynb  Makefile  README.md  arrowdetection.ipynb  convert_tflite.py  convert_tflite.sh  detectarrows.ipynb  export_saved_tflite.sh  files.pickle  generate_tfrecord.py  images.ipynb  licenseplate.ipynb  paths.pickle  pylintrc  restartnvidia.sh  setup_object_detection.ipynb  setupobjectdetection.ipynb  test_gpu.py  testmodel_tf.py  testmodel_tflite.py  train_arrow_detection.ipynb
(+2 files in other folders)
